# uom

./: .gitignore  LICENSE  TECH_DOC.md  docker-compose.yml
api-gateway/: Cargo.toml  config.py  main.py  middleware.py  routes.py
api-gateway/proxies/: http_proxy.py  ws_proxy.py
api-gateway/src/: config.rs  main.rs  middleware.rs  routes.rs  state.rs
api-gateway/src/proxy/: http.rs  ws.rs
services/api-gateway/: README.md
services/auth-service/: .env  auth.py  config.py  requirements.txt  storage.py
services/auth-service/handlers/: auth.py  auth_handler.py
services/auth-service/models/: auth.py
services/auth-service/routes/: auth_routes.py
services/auth-service/utils/: auth.py
services/auth_service/: Dockerfile  config.py  main.py  requirements.txt
services/auth_service/handlers/: __init__.py  handle_login.py  handle_register.py
services/auth_service/models/: auth.py
services/auth_service/routes/: auth_routes.py
services/auth_service/schemas/: auth.py
services/auth_service/utils/: auth.py  (+1 more)
services/message-service/: .env  Dockerfile  config.py  main.py  models.py  requirements.txt  storage.py
services/real-time-service/: Dockerfile  package-lock.json  package.json
services/user-service/: Dockerfile  README copy.md  config.py  main.py  requirements.txt  storage.py
services/user_service/: config.py  main.py
uom-frontend/: next.config.ts  package-lock.json  package.json
uom-frontend/app/: globals.css  page.tsx
uom-frontend/hooks/: useChat.ts
uom-frontend/lib/: axios.ts
uom-frontend/main/: config.ts
uom-frontend/types/: index.ts
(+43 files in other folders)
