[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum             = { version = "0.8",  features = ["ws", "macros"] }
tokio            = { version = "1",    features = ["full"] }
reqwest          = { version = "0.12", features = ["json"] }
serde_json       = "1"
serde_urlencoded = "0.7"
bytes            = "1"
chrono           = { version = "0.4",  features = ["clock"] }
dotenv           = "0.15"
futures-util     = "0.3"
tokio-tungstenite = { version = "0.24", features = ["connect"] }